--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,12 @@
   "devDependencies": {
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.33",
+    "prettier": "3.2.5",
     "tailwindcss": "^3.4.1",
     "vite": "^5.0.8"
   },
   "dependencies": {
-    "flowbite": "^2.2.1"
+    "flowbite": "^2.2.1",
+    "swiper": "^11.0.5"
   }
 }
